# handle-bot-rust

./: .gitignore  Cargo.toml  readme.md  update_idioms.py
data/: all_idioms.txt  tests.txt
src/: bot.rs  handle_pinyin.rs  lib.rs  main.rs
