[package]
name = "handle-bot-rust"
version = "0.1.0"
edition = "2021"
default-run = "handle-bot-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
lazy_static = "1"
ndarray = "0.15.4"
ordered-float = "2.0"
indicatif = "0.16.2"
ndarray-npy = "0.8.1"
priority-queue = "1.2.1"
